--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Ирина Карстен | UpCard</title>
-    <link href="fontawesome-free-6.2.1-web/css/fontawesome.css" rel="stylesheet"/>
-    <link href="fontawesome-free-6.2.1-web/css/brands.css" rel="stylesheet" />
-    <link href="fontawesome-free-6.2.1-web/css/solid.css" rel="stylesheet" />
-    <link href="fontawesome-free-6.2.1-web/css/regular.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/vendor.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <title>Card | UpCard</title>
     <script defer="defer" src="js/main.js"></script>
 </head>
     <div id="app"></div>
